fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,3 @@
-* {
-	overflow: hidden;
-}
 /*--------------------------------------------------------------
 # Body
 --------------------------------------------------------------*/
@@ -9,6 +6,9 @@ body {
 	background: #f8f8ff;
 }
 
+div {
+	overflow: hidden;
+}
 /*--------------------------------------------------------------
 # Section Hero
 --------------------------------------------------------------*/
